--- a/CafeMellemfolk.html
+++ b/CafeMellemfolk.html
@@ -102,25 +102,28 @@
 
 
             <!-- logo -->
-            <div class="icon" id="logo">
-                <svg xmlns="http://www.w3.org/2000/svg" width="264.275" height="114.78" viewBox="0 0 264.275 114.78">
-                    <g id="Logo_Placeholder" data-name="Logo Placeholder" transform="translate(-823.632 -23.284)">
-                        <path id="A"
-                            d="M46.817-72.063c8.835-.387,15.247-7.125,15.247-16.343,0-9.45-6.8-16.3-16.054-16.3-9.228,0-16.043,6.853-16.043,16.3,0,9.188,6.38,15.913,15.154,16.339L-4.12,10.07H37.067l8.9-16.3,8.9,16.3H96.057Zm-4.525-16.3a3.724,3.724,0,0,1,3.8-3.873,3.727,3.727,0,0,1,3.813,3.873,3.739,3.739,0,0,1-3.813,3.9A3.736,3.736,0,0,1,42.292-88.361Z"
-                            transform="translate(991.85 127.994)" fill="#424242" />
-                        <path id="W"
-                            d="M0-70,15.52,11.427,45.76-16.314,76,11.427,91.52-70H56.42L53.83-51.194l-8.07-6.983-8.07,6.983L35.1-70Z"
-                            transform="translate(911.87 126.637)" fill="#424242" />
-                        <g id="H" transform="translate(823.632 56.637)">
-                            <path id="Path_2" data-name="Path 2" d="M11.29,222.11v.01h0Z"
-                                transform="translate(-11.29 -140.693)" fill="#424242" />
-                            <path id="Path_3" data-name="Path 3"
-                                d="M60.74,65.27V98.363H50.078V65.27H50L11.29,146.7H50.078V113.6H60.74V146.7H99.528V65.27Z"
-                                transform="translate(-11.29 -65.27)" fill="#424242" />
+            <a href="index.html">
+                <div class="icon" id="logo">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="264.275" height="114.78"
+                        viewBox="0 0 264.275 114.78">
+                        <g id="Logo_Placeholder" data-name="Logo Placeholder" transform="translate(-823.632 -23.284)">
+                            <path id="A"
+                                d="M46.817-72.063c8.835-.387,15.247-7.125,15.247-16.343,0-9.45-6.8-16.3-16.054-16.3-9.228,0-16.043,6.853-16.043,16.3,0,9.188,6.38,15.913,15.154,16.339L-4.12,10.07H37.067l8.9-16.3,8.9,16.3H96.057Zm-4.525-16.3a3.724,3.724,0,0,1,3.8-3.873,3.727,3.727,0,0,1,3.813,3.873,3.739,3.739,0,0,1-3.813,3.9A3.736,3.736,0,0,1,42.292-88.361Z"
+                                transform="translate(991.85 127.994)" fill="#424242" />
+                            <path id="W"
+                                d="M0-70,15.52,11.427,45.76-16.314,76,11.427,91.52-70H56.42L53.83-51.194l-8.07-6.983-8.07,6.983L35.1-70Z"
+                                transform="translate(911.87 126.637)" fill="#424242" />
+                            <g id="H" transform="translate(823.632 56.637)">
+                                <path id="Path_2" data-name="Path 2" d="M11.29,222.11v.01h0Z"
+                                    transform="translate(-11.29 -140.693)" fill="#424242" />
+                                <path id="Path_3" data-name="Path 3"
+                                    d="M60.74,65.27V98.363H50.078V65.27H50L11.29,146.7H50.078V113.6H60.74V146.7H99.528V65.27Z"
+                                    transform="translate(-11.29 -65.27)" fill="#424242" />
+                            </g>
                         </g>
-                    </g>
-                </svg>
-            </div>
+                    </svg>
+                </div>
+            </a>
 
             <!-- language switch icon -->
             <a href="PageUnderConstruction.html">
